--- a/pom.xml
+++ b/pom.xml
@@ -138,6 +138,12 @@
             <artifactId>commons-lang</artifactId>
             <version>2.6</version>
         </dependency>
+        <dependency>
+            <groupId>com.oracle</groupId>
+            <artifactId>ojdbc6</artifactId>
+            <version>11.2.0.2.0-1</version>
+            <!--  <scope>provided</scope> -->
+        </dependency>
     </dependencies>
 
     <build>
