--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,7 @@ server.port=8777
 logging.level.gov.usgs=INFO
 
 spring.servlet.multipart.max-request-size=20mb
+
+jdbc.url = jdbc:oracle:thin:@152.61.236.135:1521:devnolog
+jdbc.username = WQP_CORE
+jdbc.password = password
