--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,6 +3,6 @@ logging.level.gov.usgs=INFO
 
 export.filename = wqp-web-log.csv
 
-jdbc.url = jdbc:oracle:thin:@152.61.236.135:1521:devnolog
+jdbc.server   = 152.61.236.135:1521:devnolog
 jdbc.username = WQP_CORE
 jdbc.password = password
