--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>gov.usgs.water</groupId>
-    <artifactId>WQP-Export</artifactId>
+    <artifactId>wqp-export</artifactId>
     <name>wqp-export</name>
     <description></description>
     <version>1.0.0-SNAPSHOT</version>
