--- a/pom.xml
+++ b/pom.xml
@@ -5,8 +5,8 @@
     <groupId>gov.usgs.water</groupId>
     <artifactId>wqp-export</artifactId>
     <name>wqp-export</name>
-    <description></description>
-    <version>1.0.0-SNAPSHOT</version>
+    <description />
+    <version>1.0.0</version>
     <packaging>${packaging.type}</packaging>
     <properties>
         <maven.version>3.5.4</maven.version>
@@ -78,7 +78,7 @@
         <url>${scm.urlBase}</url>
         <!-- lookup the code by the short git repo name -->
         <developerConnection>scm:git:${scm.devConnectionBase}.git</developerConnection>
-        <tag>HEAD</tag>
+        <tag>wqp-export-1.0.0</tag>
     </scm>
 
     <distributionManagement>
