removed double git extenstion from pom scm

--- a/pom.xml
+++ b/pom.xml
@@ -40,7 +40,7 @@
         <maven.build.timestamp.format>yyyy-MM-dd HH:mm:ss' 'z</maven.build.timestamp.format>
         <scm.urlBase>https://github.com/NWQMC/wqp-export</scm.urlBase>
         <!--  scm.devConnectionBase>git@github.com:NWQMC/wqp-export</scm.devConnectionBase -->
-        <scm.devConnectionBase>git@github.com:NWQMC/wqp-export.git</scm.devConnectionBase>
+        <scm.devConnectionBase>git@github.com:NWQMC/wqp-export</scm.devConnectionBase>
         <artifactory.urlBase>https://cida.usgs.gov/artifactory/</artifactory.urlBase>
         <artifactory.snapshots>wma-maven-snapshots</artifactory.snapshots>
         <artifactory.releases>wma-maven-releases</artifactory.releases>
