--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
     <artifactId>wqp-export</artifactId>
     <name>wqp-export</name>
     <description />
-    <version>1.0.1</version>
+    <version>1.0.2-SNAPSHOT</version>
     <packaging>${packaging.type}</packaging>
     <properties>
         <maven.version>3.5.4</maven.version>
@@ -78,7 +78,7 @@
         <url>${scm.urlBase}</url>
         <!-- lookup the code by the short git repo name -->
         <developerConnection>scm:git:${scm.devConnectionBase}.git</developerConnection>
-        <tag>wqp-export-1.0.1</tag>
+        <tag>HEAD</tag>
     </scm>
 
     <distributionManagement>
