a temp volume will be mounted in the jenkins job workspace dir for this initial run

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 server.port=8777
 logging.level.gov.usgs=INFO
 
-export.filename = wqp-web-log
+export.filename = temp/wqp-web-log
 
 jdbc.server   = 152.61.236.135:1521:devnolog
 jdbc.username = WQP_CORE
